--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         </figure>
       </a>
     </div>
+    <div id="contact" class="contact">
+      <div class="header">
+        <h1>Let me help you sometime</h1>
+        <p>Contact me</p>
+      </div>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
