created link to github profile under contact

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <h1>Let me help you sometime</h1>
         <p>Contact me</p>
       </div>
+      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      </div>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
