--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
       <h1>Hey I'm David.</h1>
       <p>a web developer</p>
     </div>
-    <div id="projects">
+    <div id="projects" class="work">
       <h2 class="work-header">
         These are some of my projects...
       </h2>
+      <div class="project-pics">
       <a href="https://learningcomponents.org" target="_blank" class="project">
         <figure class="project-tile">
           <img
@@ -34,6 +35,37 @@
           <figcaption>Home Page</figcaption>
         </figure>
       </a>
+      <a href="https://learningcomponents.org" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
+            alt="facebook"
+          />
+          <figcaption>Home Page</figcaption>
+        </figure>
+      </a>
+      <a href="https://learningcomponents.org" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
+            alt="facebook"
+          />
+          <figcaption>Home Page</figcaption>
+        </figure>
+      </a>
+      <a href="https://learningcomponents.org" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
+            alt="facebook"
+          />
+          <figcaption>Home Page</figcaption>
+        </figure>
+      </a>
+      </div>
     </div>
     <div id="contact" class="contact">
       <div class="header">
@@ -43,6 +75,9 @@
       <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
       </div>
     </div>
+    <footer>
+      <p>&copy; 2019 All rights reserved</p>
+    </footer>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
