--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
         <h1>Let me help you sometime</h1>
         <p>Contact me</p>
       </div>
+      <div class="contact-box">
       <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      </div>
       </div>
     </div>
     <footer>
