Added StarWars api

--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
     <footer>
       <p>&copy; 2019 All rights reserved</p>
     </footer>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
