imported more starwars api and put films and crawl in intro

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>David's Personal Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
   </head>
   <body>
     <nav>
@@ -17,8 +16,8 @@
       </ul>
     </nav>
     <div id="welcome-section" class="intro">
-      <h1>Hey I'm David.</h1>
-      <p>a web developer</p>
+      <!-- <h1 class="title">Hey I'm David.</h1>
+      <p class="crawl">a web developer</p> -->
     </div>
     <div id="projects" class="work">
       <h2 class="work-header">
@@ -83,6 +82,6 @@
     <footer>
       <p>&copy; 2019 All rights reserved</p>
     </footer>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script type="module" src="main.js"></script>
   </body>
 </html>
