--- a/starWarsPeople.html
+++ b/starWarsPeople.html
@@ -6,10 +6,15 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/swpeople.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
 </head>
 <body>
-    <h1>hi</h1>
+    <div class="container">
+
+    </div>
+    <h1></h1>
     <script type="module" src="/scripts/swpeople.js"></script>
 </body>
 </html>
