--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>David's Personal Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
   </head>
   <body>
     <nav>
@@ -82,6 +82,6 @@
     <footer>
       <p>&copy; 2019 All rights reserved</p>
     </footer>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/scripts/main.js"></script>
   </body>
 </html>
