Added movies and crawls as well as starry background

--- a/starWarsPeople.html
+++ b/starWarsPeople.html
@@ -12,6 +12,16 @@
 
 </head>
 <body>
+   <div class="crawl-heading">
+    <p>Star Wars Movies</p>
+   </div>
+   
+    <div class="intro">
+
+    </div>
+    <div class="heading">
+        <h1>Star Wars Characters</h1>And Home Planetsp
+    </div>
     <div class="container">
 
     </div>
