--- a/starWarsPeople.html
+++ b/starWarsPeople.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/swpeople.css">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/css/swpeople.css"
+    />
+  </head>
+  <body>
+    <!-- <nav>
+      <ul id="navbar">
+        <li><a href="#movies">Movies</a></li>
+        <li><a href="#characters">Characters</a></li>
+      </ul>
+    </nav> -->
+    <div id="movies" class="crawl-heading">
+      <p>Star Wars Movies</p>
+    </div>
 
-</head>
-<body>
-   <div class="crawl-heading">
-    <p>Star Wars Movies</p>
-   </div>
+    <div class="intro"></div>
+    <div id="characters" class="character-heading">
+      Star Wars Characters<br>
+      And Home Planets
+    </div>
    
-    <div class="intro">
-
-    </div>
-    <div class="heading">
-        <h1>Star Wars Characters</h1>And Home Planetsp
-    </div>
-    <div class="container">
-
-    </div>
-    <h1></h1>
+    <footer></footer>
+    
     <script type="module" src="/scripts/swpeople.js"></script>
-</body>
+  </body>
+  <footer></footer>
 </html>
