--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -13,6 +13,7 @@ p<!DOCTYPE html>
         <li><a href="#welcome-section">About</a></li>
         <li><a href="#projects">Work</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="/starWarsPeople.html">Star Wars</a></li>
       </ul>
     </nav>
     <div id="welcome-section" class="intro">
