--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="#projects">Work</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="/starWarsPeople.html">Star Wars</a></li>
+        <li><a href="/pokemonCards.html">Pokemon Cards</a></li>
       </ul>
     </nav>
     <div id="welcome-section" class="intro">
