added background image

--- a/pokemonCards.html
+++ b/pokemonCards.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/pokemon.css">   
 </head>
-<body>
+<body background="background.jpg">
     <div class="container">
 
     </div>
