initially load page with 25 pokemon fixed

--- a/pokemonCards.html
+++ b/pokemonCards.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/pokemon.css">   
 </head>
-<body background="background.jpg">
+<body>
+    <main>
     <div class="container">
-
     </div>
     <button class="button">Create New Pokemon</button>
+</main>
     <script src="/scripts/pokeCards.js" type="module"></script>
 </body>
 </html>
