added flip animation and color

--- a/pokemonCards.html
+++ b/pokemonCards.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pokemon Cards</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/pokemon.css">   
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/pokemon.css">
 </head>
 <body>
     <main>
+    <h1>Pokemon Cards</h1>
     <div class="container">
+
     </div>
-    <button class="button">Create New Pokemon</button>
+    <button class="button is-primary">Fetch a specific Pokemon</button>
 </main>
     <script src="/scripts/pokeCards.js" type="module"></script>
 </body>
