--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="/starWarsPeople.html">Star Wars</a></li>
         <li><a href="/pokemonCards.html">Pokemon Cards</a></li>
+        <li><a href="/kh.html">Kingdom Hearts</a></li>
       </ul>
     </nav>
     <div id="welcome-section" class="intro">
