--- a/kh.html
+++ b/kh.html
@@ -24,6 +24,6 @@
     <div>
       <footer><p>&copy; 2019 All rights reserved</p></footer>
     </div>
-    <script type="module" src="kh.js"></script>
+    <script type="module" src="scripts\kh.js"></script>
   </body>
 </html>
