--- a/index.html
+++ b/index.html
@@ -13,21 +13,48 @@
         <li><a href="#welcome-section">About</a></li>
         <li><a href="#projects">Work</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="/starWarsPeople.html">Star Wars</a></li>
-        <li><a href="/pokemonCards.html">Pokemon Cards</a></li>
-        <li><a href="/kh.html">Kingdom Hearts</a></li>
       </ul>
     </nav>
     <div id="welcome-section" class="intro">
-      <!-- <h1 class="title">Hey I'm David.</h1>
-      <p class="crawl">a web developer</p> -->
+      <h1 >Hey I'm David.</h1>
+      <p>a web developer</p>
     </div>
     <div id="projects" class="work">
       <h2 class="work-header">
         These are some of my projects...
       </h2>
       <div class="project-pics">
-      <a href="https://learningcomponents.org" target="_blank" class="project">
+      <a href="/starWarsPeople.html" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="./images/starwars_background.png"
+            alt="starwars"
+          />
+          <figcaption>Star Wars Movies & People</figcaption>
+        </figure>
+      </a>
+      <a href="/pokemonCards.html" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="./images/pokemon_background.png"
+            alt="pokemon"
+          />
+          <figcaption>Pokemon Cards</figcaption>
+        </figure>
+      </a>
+      <a href="/kh.html" target="_blank" class="project">
+        <figure class="project-tile">
+          <img
+            class="figure-pic"
+            src="./images/kingdomhearts_background.png"
+            alt="facebook"
+          />
+          <figcaption>Kingdom Hearts Characters</figcaption>
+        </figure>
+      </a>
+      <!-- <a href="https://learningcomponents.org" target="_blank" class="project">
         <figure class="project-tile">
           <img
             class="figure-pic"
@@ -36,37 +63,7 @@
           />
           <figcaption>Home Page</figcaption>
         </figure>
-      </a>
-      <a href="https://learningcomponents.org" target="_blank" class="project">
-        <figure class="project-tile">
-          <img
-            class="figure-pic"
-            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
-            alt="facebook"
-          />
-          <figcaption>Home Page</figcaption>
-        </figure>
-      </a>
-      <a href="https://learningcomponents.org" target="_blank" class="project">
-        <figure class="project-tile">
-          <img
-            class="figure-pic"
-            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
-            alt="facebook"
-          />
-          <figcaption>Home Page</figcaption>
-        </figure>
-      </a>
-      <a href="https://learningcomponents.org" target="_blank" class="project">
-        <figure class="project-tile">
-          <img
-            class="figure-pic"
-            src="https://cdn.worldvectorlogo.com/logos/facebook-icon.svg"
-            alt="facebook"
-          />
-          <figcaption>Home Page</figcaption>
-        </figure>
-      </a>
+      </a> -->
       </div>
     </div>
     <div id="contact" class="contact">
@@ -76,9 +73,9 @@
       </div>
       <div class="contact-box">
       <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
-      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
-      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
-      <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a>
+      <a id='profile-link' href="https://www.linkedin.com/in/david-enciso-8b7843124/" target="_blank" class="contact-details">LinkedIn</a>
+      <a id='profile-link' href="mailto:dpenciso@msn.com" class="contact-details">Email</a>
+      <!-- <a id='profile-link' href="https://github.com/dpenciso" target="_blank" class="contact-details">GitHub</a> -->
       </div>
       </div>
     </div>
