added constructor and fixed mr. mime

--- a/pokemonCards.html
+++ b/pokemonCards.html
@@ -14,7 +14,14 @@
     <div class="container">
 
     </div>
-    <button class="button is-primary">Fetch a specific Pokemon</button>
+<div class="buttons">
+    <button id="fetchPokemon" class="button is-primary">Fetch a specific Pokemon</button>
+    <button id="davidmon" class="button is-primary">Create a new Davidmon</button>
+</div>
+<div>
+    <input type="checkbox" id="poison" name="poison">
+    <label for="poison">Poison</label>
+</div>d
 </main>
     <script src="/scripts/pokeCards.js" type="module"></script>
 </body>
