added header to pokemon.html and added width to kh

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="/starWarsPeople.html" target="_blank" class="project">
         <figure class="project-tile">
           <img
-            class="figure-pic"
+            class="figure-pic_starwars"
             src="./images/starwars_background.png"
             alt="starwars"
           />
@@ -37,7 +37,7 @@
       <a href="/pokemonCards.html" target="_blank" class="project">
         <figure class="project-tile">
           <img
-            class="figure-pic"
+            class="figure-pic_pokemon"
             src="./images/pokemon_background.png"
             alt="pokemon"
           />
