--- a/kh.html
+++ b/kh.html
@@ -15,7 +15,7 @@
     ></script>
     <link rel="stylesheet" type="text/css" media="screen" href="kh.css" />
   </head>
-  <body background="./images/background.jpg">
+  <body>
     <h1 style="font-family: 'Kingdom Hearts'">Kingdom Hearts Characters</h1>
 
     <div class="container"></div>
