--- a/pokemonCards.html
+++ b/pokemonCards.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Pokemon Cards</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"> -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/pokemon.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/css/pokemon.css"
+    />
+  </head>
+  <body>
     <main>
-    <h1>Pokemon Cards</h1>
-    <div class="container">
-
-    </div>
-<div class="buttons">
-    <button id="fetchPokemon" class="button is-primary">Fetch a specific Pokemon</button>
-    <button id="davidmon" class="button is-primary">Create a new Davidmon</button>
-</div>
-<div>
-    <input type="checkbox" id="poison" name="poison">
-    <label for="poison">Poison</label>
-</div>d
-</main>
+      <h1>Pokemon Cards</h1>
+      <h2>
+        This is a site for Pokemon trainers and Pokemon alike. Here one can look
+        up any Pokemon by their number and even create a new Davidmon. <br> Let's
+        CATCH 'EM ALL!
+      </h2>
+      <div class="container"></div>
+      <div class="buttons">
+        <button id="fetchPokemon" class="button is-primary">
+          Fetch a specific Pokemon
+        </button>
+        <button id="davidmon" class="button is-primary">
+          Create a new Davidmon
+        </button>
+      </div>
+      <div>
+        <input type="checkbox" id="poison" name="poison" />
+        <label for="poison">Poison</label>
+      </div>
+      d
+    </main>
     <script src="/scripts/pokeCards.js" type="module"></script>
-</body>
+  </body>
 </html>
